fix: align

--- a/src/blocks/_pro/gridcolcard/style.scss
+++ b/src/blocks/_pro/gridcolcard/style.scss
@@ -45,6 +45,9 @@
 		}
 		&_body{
 			display: grid;
+			&-valign-top{
+				align-content: start;
+			}
 			&-valign-center{
 				align-content: center;
 			}
